--- a/reg1.html
+++ b/reg1.html
@@ -24,7 +24,7 @@
   </footer>
 
   <script>
-    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyUXD02Ww4DPTiJiO0yKP_DYMeL7b5CueIHaFE9KDZwhcBmm8L2Qt8ZLWtunuxxZFCm/exec";
+    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyUXD02Ww4DPTiJiO0yKP_DYMeL7b5CueIHaFE9KDZwhcBmm8L2Qt8ZLWtunuxxZFCm/exec?action=getData";
 
     async function fetchData() {
       try {
