--- a/test1.html
+++ b/test1.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h2>Immunization Register</h2>
+<h2>Immunization Register Test 1 v1</h2>
 <div id="status">Loading data...</div>
 <table id="dataTable">
   <thead></thead>
